Add Redis dependencies to package.json and package-lock.json

--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "redis": "^5.10.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/redis": "^4.0.10",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
