--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.2.1",
     "redis": "^5.10.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@types/redis": "^4.0.10",
     "@types/ws": "^8.18.1",
