--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "downlevelIteration": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
