--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "axios": "^1.13.2",
     "howler": "^2.2.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
