feat: Enhance chat message handling and storage
- Implemented a message store to manage messages per friend, preventing loss when switching chats.
- Added functionality to track unread message counts for friends.
- Improved message addition logic to prevent duplicates based on ID and recent timestamps.
- Updated loadHistory to replace existing messages with authoritative history data.
- Introduced switchToFriend and getUnreadCount hooks for better friend management.
- Enhanced typing indicator with a stopTyping method.
- Added pending message retrieval functionality in the message service.
- Updated socket service to handle message queuing when the socket is not ready.
- Improved sound manager to increase audio pool size for better performance.
- Integrated dotenv for environment variable management in the server.
- Enhanced message controller to retrieve pending/unread messages.
- Updated Redis service to handle username/password parsing for Redis connections.

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,9 +4,9 @@ NODE_ENV=development
 SERVER_ID=server-1
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
-# For production with remote Redis:
-# REDIS_URL=redis://your-redis-host:6379
+REDIS_URL=redis://localhost:6383
+# For production with remote Redis (with auth):
+# REDIS_URL=redis://default:your-redis-password@your-redis-host:6383
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/realtime-chat
