--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.13.2",
+    "franc-min": "^6.2.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
@@ -37,6 +38,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
