--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd server && npm install && npm run build
+    buildCommand: cd server && npm ci && npm run build
     startCommand: cd server && npm start
     healthCheckPath: /health
     envVars:
