--- a/client/vercel.json
+++ b/client/vercel.json
@@ -6,7 +6,41 @@
   "framework": "vite",
   "routes": [
     {
+      "src": "/sw.js",
+      "headers": {
+        "content-type": "application/javascript",
+        "cache-control": "no-cache"
+      }
+    },
+    {
+      "src": "/sw-push.js",
+      "headers": {
+        "content-type": "application/javascript",
+        "cache-control": "no-cache"
+      }
+    },
+    {
+      "src": "/workbox-.*\\.js",
+      "headers": {
+        "content-type": "application/javascript",
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/manifest.webmanifest",
+      "headers": {
+        "content-type": "application/manifest+json",
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    },
+    {
       "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|webp))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       }
